# component-model-tests

./: .gitmodules  README.md
add/: Cargo.toml  README.md
add/src/: bindings.rs  lib.rs
add/wit/: world.wit
core/: README.md  component.wasm  core.wasm  core.wat
docker/: Dockerfile  README.md  build.sh  run-core.sh  run-wasi-http.sh
http/: README.md  http.wasm  http.wat
preview2/: wasi-cli.wasm  wasi-cli.wat
simple-run/: Cargo.toml  README.md
simple-run/src/: lib.rs
simple-run/wit/: world.wit
wasi-http/: wasi-http.wasm  wasi-http.wat
wasi-io/: README.md
wit-bindgen-test/: Cargo.toml
wit-bindgen-test/src/: lib.rs
wit-bindgen-test/wit/: host.wit
